--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.3.1
+plotly==5.3.1
 prometheus-client==0.11.0
 prompt-toolkit==3.0.19
 protobuf==3.17.3
@@ -78,6 +79,7 @@ six==1.16.0
 smmap==4.0.0
 soupsieve==2.2.1
 streamlit==0.85.1
+tenacity==8.0.1
 terminado==0.10.1
 testpath==0.5.0
 text-unidecode==1.3
