--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ argon2-cffi==20.1.0
 astor==0.8.1
 async-generator==1.10
 attrs==21.2.0
+autopep8==1.5.7
 backcall==0.2.0
 base58==2.1.0
 beautifulsoup4==4.9.3
@@ -61,6 +62,7 @@ prompt-toolkit==3.0.19
 protobuf==3.17.3
 ptyprocess==0.7.0
 pyarrow==5.0.0
+pycodestyle==2.7.0
 pycparser==2.20
 pydeck==0.6.2
 Pygments==2.9.0
